# TurboWire

./: .gitignore  README.md  biome.json  package.json  pnpm-lock.yaml  turbowire.excalidraw
.github/workflows/: publish-docker-hub.yml
apps/server/: .env.sample  Cargo.toml  Dockerfile  README.md
apps/server/src/: main.rs
apps/server/src/routes/: base.rs  broadcast.rs  health.rs  mod.rs  sign.rs  token.rs  wire.rs
apps/server/src/shared/: mod.rs
benchmark/: test.js
examples/next/: README.md  package.json  pnpm-lock.yaml
examples/next/app/: actions.ts  layout.tsx  page.tsx
examples/next/components/: ChatRoom.tsx
examples/next/hooks/: useChat.ts
examples/next/lib/: schema.ts  turbo.ts
